objects/SIGSTR__Sigstr_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>SIGSTR__API_Key__c</fullName>
        <label>API Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Log__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turn on/off Sigstr Logging</description>
        <inlineHelpText>Turn on/off Sigstr Logging</inlineHelpText>
        <label>Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Service_Endpoint__c</fullName>
        <label>Service Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Sync_Accounts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Sync_Campaigns__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Run code associated with syncing Campaigns with Sigstr</inlineHelpText>
        <label>Sync Campaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Sync_Contacts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Run code associated with syncing Contacts with Sigstr</inlineHelpText>
        <label>Sync Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Sync_Leads__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Run code associated with syncing Leads with Sigstr</inlineHelpText>
        <label>Sync Leads</label>
        <type>Checkbox</type>
    </fields>
    <label>Sigstr Settings</label>
</CustomObject>